5th try to fix unresponsiveness on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   min-height: 100%;
+  min-height: webkit-fill-available;
   width: 100vw;
   overflow-x: hidden;
   overflow-y: scroll;
